# TorchProteinLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  __init__.py  build.py  cBackboneProteinCUDAKernels.cu  cBackboneProteinCUDAKernels.h  cMathCUDAKernels.cu  cMathCUDAKernels.h  cTensorProteinCUDAKernels.h  main.cu  setup.py  tmp.py
Benchmark/: core.py  fullatommodel.py  lstm.py  main.py  reducedmodel.py  rmsd.py  volumemul.py
CppProteinLoader/: CMakeLists.txt  cProteinLoader.cpp  cProteinLoader.h  loadProtein.cpp  loadProteinCUDAdirect.cu
Doc/: Angles2Backbone.tex  Angles2Coords.tex  BMatrixBend.tex  BMatrixDihedral.tex  BMatrixMatrix.tex  bibliography.bib  listings.sty  main.tex
Electrostatics/: Makefile  main.cu
GL/: CMakeLists.txt  GlutFramework.cpp  GlutFramework.h  Keyboard.cpp  Keyboard.h  Object.h  PerformanceTimer.cpp  PerformanceTimer.h  Point.h  Vector.h
Layers/: loadProteinCUDA.cu
Layers/C_alpha_protein/: CMakeLists.txt  RMSDKernels.cu  RMSDKernels.h  cABModelCUDAKernels.cu  cABModelCUDAKernels.h  cBackboneProteinCUDAKernels.cu  cBackboneProteinCUDAKernels.h  cMathCUDAKernels.cu  cMathCUDAKernels.h  cPairwisePotentialsKernels.cu  cPairwisePotentialsKernels.h  cTensorProteinCUDAKernels.cu  cTensorProteinCUDAKernels.h
Layers/C_alpha_protein/Angles2BMatrix/: angles2bmatrix_interface.cpp  angles2bmatrix_interface.h  cAngles2BMatrix.cpp  cAngles2BMatrix.h
Layers/C_alpha_protein/Angles2Backbone/: angles2backbone_interface.cpp  angles2backbone_interface.h  angles2backbone_interface_double.h
Layers/C_alpha_protein/Angles2BasisDihedral/: angles2basisDihedral_interface.cpp  angles2basisDihedral_interface.h  cAngles2BasisDihedral.cpp  cAngles2BasisDihedral.h
Layers/C_alpha_protein/Angles2CoordsAB/: angles2coordsAB_interface.cpp  cAngles2CoordsAB.cpp  cAngles2CoordsAB.h
Layers/C_alpha_protein/Angles2CoordsDihedral/: angles2BackboneTest.cpp  angles2coordsDihedral_interface.cpp  angles2coordsDihedral_interface.h  angles2coordsDihedral_interface_double.h  angles2coordsDihedral_interface_float.h  cAngles2CoordsDihedral.cpp  cAngles2CoordsDihedral.h
Layers/C_alpha_protein/Coords2Pairs/: cCoords2Pairs.cpp  cCoords2Pairs.h  coords2pairs_interface.cpp  coords2pairs_interface.h
Layers/C_alpha_protein/Coords2RMSD/: cCoords2RMSD.cpp  cCoords2RMSD.h  cCoords2RMSDInterface.cpp  cCoords2RMSDInterface.h
Layers/C_alpha_protein/Ddist2Forces/: cDdist2Forces.cpp  cDdist2Forces.h  ddist2forces_interface.cpp  ddist2forces_interface.h
Layers/C_alpha_protein/Forces2Dangles/: cForces2Dangles.cpp  cForces2Dangles.h  forces2dangles_interface.cpp  forces2dangles_interface.h
Layers/C_alpha_protein/Pairs2Dist/: cPairs2Dist.cpp  cPairs2Dist.h  pairs2dist_interface.cpp  pairs2dist_interface.h
Layers/FullAtomModel/: CMakeLists.txt  Kernels.cu  Kernels.h  TransformCUDAKernels.cu  TransformCUDAKernels.h  cConformation.cpp  cConformation.h  cConformationAA.cpp  cGeometry.cpp  cGeometry.h  cPDBLoader.cpp  cPDBLoader.h  cRMSD.cpp  cRMSD.h  cRigidGroup.cpp  cRigidGroup.h  cSO3Sampler.cpp  cSO3Sampler.h  main.cpp  nUtil.cpp  nUtil.h
Layers/FullAtomModel/Angles2Coords/: angles2coords_interface.cpp  angles2coords_interface.h
Layers/FullAtomModel/Angles2Volume/: angles2volume_interface.cpp  angles2volume_interface.h
Layers/FullAtomModel/Coords2CenteredCoords/: coords2centeredcoords_interface.cpp  coords2centeredcoords_interface.h
Layers/FullAtomModel/Coords2RMSD/: coords2rmsd_interface.cpp
Layers/FullAtomModel/Coords2TypedCoords/: coords2typedcoords_interface.cpp  coords2typedcoords_interface.h
Layers/FullAtomModel/CoordsTransform/: coordsTransformGPU_interface.cpp  coordsTransformGPU_interface.h  coordsTransform_interface.cpp  coordsTransform_interface.h
Layers/FullAtomModel/PDB2Coords/: pdb2coords_interface.cpp  pdb2coords_interface.h
Layers/FullAtomModel/PDB2Volume/: pdb2volume_interface.cpp  pdb2volume_interface.h
Layers/FullAtomModel/Select/: select_interface.cpp  select_interface.h
Layers/FullAtomModel/TypedCoords2Volume/: typedcoords2volume_interface.cpp
Layers/Volume/: CMakeLists.txt  HashKernel.cu  HashKernel.h  Kernels.cu  Kernels.h  RotateGrid.cu  RotateGrid.h  VolumeConv.cu  VolumeConv.h  VolumeRMSD.cu  VolumeRMSD.h  main.cpp
Layers/Volume/PDB2Volume/: pdb2volumeLocal_interface.cpp  pdb2volumeLocal_interface.h  pdb2volume_interface.cpp  pdb2volume_interface.h
Layers/Volume/Select/: select_interface.cpp  select_interface.h
Layers/Volume/TypedCoords2Volume/: typedcoords2volume_interface.cpp  typedcoords2volume_interface.h
Layers/Volume/Volume2Xplor/: volume2xplor_interface.cpp  volume2xplor_interface.h
Layers/Volume/VolumeConvolution/: volumeConvolution_interface.cpp  volumeConvolution_interface.h
Layers/Volume/VolumeRMSD/: volumeRMSD_interface.cpp  volumeRMSD_interface.h
Layers/Volume/VolumeRotation/: volumeRotation_interface.cpp  volumeRotation_interface.h
Math/: CMakeLists.txt  cMathCUDAKernels.cu  cMathCUDAKernels.h  cMatrix.py  cMatrix33.cpp  cMatrix33.h  cMatrix44.cpp  cMatrix44.h  cVector3.cpp  cVector3.h  nUtil.cpp  nUtil.h  nUtil.py
PythonInterface/: __init__.py  build_layers.py  build_utils.py  build_visualization.py
TorchProteinLibrary/: __init__.py
UnitTests/: PDBLoaderTest.cpp  angles2BackboneProfile.cpp  angles2BackboneTest.cpp  angles2CoordsProfile.cpp  bmatrixTest.cpp  coords2VolumeTest.cpp  cpuProteinLoaderTest.cpp  cudaConvolutions.cpp  ddist2ForcesTest.cpp  densityMapSaveTest.cpp  forces2DanglesTest.cpp  fullAtomModelTest.cpp  main.py  pdb2CoordsTest.cpp  tensorUpsampleTest.cpp  volumeConvolutionProfile.cpp
Utils/: CMakeLists.txt  cDensityMap.cpp  cDensityMap.h  cGrid.cpp  cGrid.h  densityMap_interface.cpp  densityMap_interface.h
Visualization/: CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  cUtil.cpp  cUtil.h  visualization_interface.cpp  visualization_interface.h
VolumeVisualization/: CMakeLists.txt  cMarchingCubes.cpp  cMarchingCubes.h  marchingCubesDef.h  vol_viz_interface.cpp  vol_viz_interface.h
docs/: examples.html  fullatommodel.html  index.html  reducedmodel.html  (+2 more)
(+337 files in other folders)
