#CUDA_ADD_LIBRARY(CALPHA_INTERNAL_COORDINATES STATIC cTensorProteinCUDAKernels.cu cPairwisePotentialsKernels.cu)
#TARGET_LINK_LIBRARIES(CALPHA_INTERNAL_COORDINATES)

#CUDA_ADD_LIBRARY(CALPHARMSD STATIC RMSDKernels.cu)
#TARGET_LINK_LIBRARIES(CALPHARMSD)

#CUDA_ADD_LIBRARY(AB_MODEL STATIC cABModelCUDAKernels.cu)
#TARGET_LINK_LIBRARIES(AB_MODEL)

CUDA_ADD_LIBRARY(CALPHA_INTERNAL_COORDINATES STATIC cTensorProteinCUDAKernels.cu)
TARGET_LINK_LIBRARIES(CALPHA_INTERNAL_COORDINATES)


